# kafka-view

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  clusters.yaml  config.yaml  exampleConfig.yaml  rust-toolchain  rust_version
examples/: consumer_offsets_reader.rs  topic_reader.rs
private/: gen_cert.sh
resources/web_server/public/: my_css.css  my_js.js
resources/web_server/public/fonts/: .directory
resources/web_server/templates/: cluster_metadata.hbs
src/: cache.rs  config.rs  error.rs  live_consumer.rs  main.rs  metadata.rs  metrics.rs  offsets.rs  scheduler.rs  utils.rs  zk.rs
src/web_server/: api.rs  chain.rs  handlers.rs  mod.rs  server.rs  view_helpers.rs
src/web_server/pages/: cluster.rs  clusters.rs  error_defaults.rs  group.rs  internals.rs  mod.rs  omnisearch.rs  topic.rs
src/web_server/view/: layout.rs
