[package]
name = "kafka-view"
version = "0.1.0"
authors = ["Federico Giraud <giraud.federico@gmail.com>"]
license = "MIT"

[dependencies]
brotli = "^1.0.0"
byteorder = "1"
chrono = { version = "^0.4.0", features = ["serde"] }
clap = "2.18.0"
curl = "^0.4.2"
env_logger = "^0.4.3"
error-chain = "^0.11.0"
futures = "^0.1.14"
futures-cpupool = "^0.1.5"
lazy_static = "0.2.4"
log = "^0.3.0"
maud = { version = "0.17.1", features = ["rocket"] }
rand = "0.3"
rdkafka = "^0.12.0"
regex = "0.2"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
scheduled-executor = "^0.3.0"
serde = "^1.0.12"
serde-transcode = "^1.0.0"
serde_derive = "^1.0.12"
serde_json = "^1.0.3"
serde_yaml = "^0.7.1"
